# seekdb_md_mcp

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.html
docs/superpowers/specs/: 2026-05-06-smm-design.md
src/smm/cli/: import_cmd.py  init_cmd.py  main.py  mcp_cmd.py  search_cmd.py  serve_cmd.py  skill_cmd.py  status_cmd.py
src/smm/core/: chunker.py  config.py  db.py  indexer.py  searcher.py
src/smm/mcp/: server.py  tools.py
src/smm/server/: app.py  daemon.py  mcp_sse.py
src/smm/skill/: SKILL.md
src/smm/watcher/: watcher.py
tests/: test_chunker.py  test_config.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/pages/: Documents.tsx  Logs.tsx  Search.tsx  Settings.tsx
