[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smm"
version = "0.1.0"
description = "seekdb Markdown MCP - Index local documents into seekdb with MCP service"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pyseekdb>=0.1.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "watchfiles>=0.21.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
smm = "smm.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smm = ["skill/SKILL.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
